--- a/.gitignore
+++ b/.gitignore
@@ -5,14 +5,14 @@
 /Logistics/Logistics.Application.Command/bin/Debug/net8.0
 /Logistics/.vs
 /Logistics/Logistics.Application.Command/obj
-/Logistics/Logistics.Domain.Import/bin/Debug/net8.0
-/Logistics/Logistics.Domain.Import/obj
+/Logistics/Logistics.Domain.Shipping/bin
+/Logistics/Logistics.Domain.Shipping/obj
 /Logistics/Logistics.Domain.Base/bin/Debug/net8.0
 /Logistics/Logistics.Domain.Base/obj
 /Logistics/Logistics.Test.CA/bin/Debug/net8.0
 /Logistics/Logistics.Test.CA/obj
-/Logistics/Logistics.Persistance.Import/bin/Debug/net8.0
-/Logistics/Logistics.Persistance.Import/obj
+/Logistics/Logistics.Persistance.Shipping/bin
+/Logistics/Logistics.Persistance.Shipping/obj
 /.vs/playground/v17
 /.vs
 /Logistics/Logistics.Domain.Billing/bin/Debug/net8.0
