--- a/Logistics/Logistics.Persistance.Shipping/Logistics.Persistance.Shipping.csproj
+++ b/Logistics/Logistics.Persistance.Shipping/Logistics.Persistance.Shipping.csproj
@@ -1,6 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Logistics.Domain.Shipping\Logistics.Domain.Shipping.csproj" />
     <ProjectReference Include="..\Logistics.Application.Command\Logistics.Application.Command.Shipping.csproj" />
   </ItemGroup>
