--- a/Logistics/Logistics.Test.CA/Logistics.Test.CA.csproj
+++ b/Logistics/Logistics.Test.CA/Logistics.Test.CA.csproj
@@ -8,7 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -17,5 +25,4 @@
     <ProjectReference Include="..\Logistics.Integration.Internal.Shipping\Logistics.Integration.Internal.Shipping.csproj" />
     <ProjectReference Include="..\Logistics.Persistance.Shipping\Logistics.Persistance.Shipping.csproj" />
   </ItemGroup>
-
 </Project>
